--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -1,2 +1,15 @@
-<a routerLink="/products">+ Add products</a>
-<h1> Products-List </h1>
+
+
+
+<a href routerLink='/products'> + Add Products</a>
+<h1> Products list</h1><hr>
+<div *ngFor="let product of products; index as i">
+  
+  <img src="{{product.image}}">
+{{product.Name}} {{product.Price}} {{product.Description}}
+<a href> view</a> &nbsp;
+<button>Edit</button>&nbsp;
+<button>Delete</button>
+
+<hr>
+</div>
